easy list view with custom view and annotation and onclick is done

--- a/app/src/main/res/layout/custom_recycler_child.xml
+++ b/app/src/main/res/layout/custom_recycler_child.xml
@@ -21,6 +21,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/textLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -67,4 +68,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintTop_toBottomOf="@id/textLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteY="61dp" />
 </android.support.constraint.ConstraintLayout>
