--- a/app/src/main/res/layout/custom_recycler_child.xml
+++ b/app/src/main/res/layout/custom_recycler_child.xml
@@ -76,6 +76,7 @@
         android:text="Button"
         app:layout_constraintTop_toBottomOf="@id/textLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        android:clickable="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteY="61dp" />
