--- a/app/src/main/res/layout/custom_recycler_child.xml
+++ b/app/src/main/res/layout/custom_recycler_child.xml
@@ -39,6 +39,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginTop="5dp"
+            android:clickable="false"
             android:text="Title goes here"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintTop_toTopOf="parent"
@@ -50,6 +51,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:clickable="false"
             android:text="Description goes here hereDescription goes here"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             app:layout_constraintStart_toStartOf="@id/titleTextView"
